# rust_template

./: CHANGELOG.md  Cargo.toml  README.md  cog.toml  initialize-template.sh  update-hooks.sh
.cargo-husky/hooks/: commit-msg  pre-commit  pre-push
.github/workflows/: rust.yml
