[package]
name = "semver-test"
version = "0.1.0"
authors = ["Mathias Wagner Nielsen <mathiasvalentinwagner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["user-hooks", "run-cargo-test", "run-cargo-clippy"]
