[package]
name = "rust_template"
version = "0.3.3"
authors = ["Mathias Wagner Nielsen <mathiasvalentinwagner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["user-hooks"]
